 - GBA Memory: Improve gamepak prefetch timing
 - GBA Memory: Stall on VRAM access in mode 2 (fixes mgba.io/i/190)
 - GBA Memory: Improve robustness of Matrix memory support
 - GBA Memory: Mark Famicom Mini games 22 through 28 as non-mirroring
 - GBA Memory: Return correct byte for odd ROM open bus addresses
 - GBA Memory: Improved AGBPrint emulation of edge cases (fixes mgba.io/i/1867)
 - GBA Serialize: Fix alignment check when loading states
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA SIO: Fix Normal mode being totally broken (fixes mgba.io/i/1800)
 - GBA SIO: Fix deseralizing SIO registers
 - GBA SIO: Fix hanging on starting a second multiplayer window (fixes mgba.io/i/854)
 - GBA SIO: Fix Normal mode transfer start timing (fixes mgba.io/i/425)
 - GBA Timers: Fix toggling timer cascading while timer is active (fixes mgba.io/i/2043)
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Implement green swap (fixes mgba.io/i/1609)
 - GBA Video: Emulate sprite cycle limits in OpenGL renderer (fixes mgba.io/i/1635)
 - GBA Video: Fix OBJWIN erratic rendering in OpenGL renderer
 - SM83: Emulate HALT bug
Other fixes:
 - 3DS: Fix thread cleanup
 - All: Improve export headers (fixes mgba.io/i/1738)
 - Cheats: Fix indirect write cheats (fixes mgba.io/i/2026)
 - CMake: Fix build with downstream minizip that exports incompatible symbols
 - CMake: Link with correct OpenGL library (fixes mgba.io/i/1872)
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix threading improperly setting paused state while interrupted
 - Core: Fix loading ELF files that have unexpected empty program headers
 - Debugger: Don't skip undefined instructions when debugger attached
 - Debugger: Close trace log when done tracing
 - Debugger: Fix change watchpoints (fixes mgba.io/i/1947)
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base